# src/Sonarr.Api.V3/Config/MediaManagementConfigResource.cs
@@ -30,6 +30,8 @@ namespace Sonarr.Api.V3.Config
         public bool ImportExtraFiles { get; set; }
         public string ExtraFileExtensions { get; set; }
         public bool EnableMediaInfo { get; set; }
+        public string DefaultRootFolderForAutoImport { get; set; }
+        public int DefaultProfileForAutoImport { get; set; }
     }
 
     public static class MediaManagementConfigResourceMapper
@@ -59,7 +61,9 @@ namespace Sonarr.Api.V3.Config
                 ScriptImportPath = model.ScriptImportPath,
                 ImportExtraFiles = model.ImportExtraFiles,
                 ExtraFileExtensions = model.ExtraFileExtensions,
-                EnableMediaInfo = model.EnableMediaInfo
+                EnableMediaInfo = model.EnableMediaInfo,
+                DefaultRootFolderForAutoImport = model.DefaultRootFolderForAutoImport,
+                DefaultProfileForAutoImport = model.DefaultProfileForAutoImport
             };
         }
     }
