# src/Sonarr.Api.V3/openapi.json
@@ -10128,6 +10128,14 @@
           },
           "enableMediaInfo": {
             "type": "boolean"
+          },
+          "defaultRootFolderForAutoImport": {
+            "type": "string",
+            "nullable": true
+          },
+          "defaultProfileForAutoImport": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
